<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageDeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_dp"
        android:layout_marginTop="@dimen/standard_dp"
        android:layout_marginBottom="@dimen/standard_dp"
        android:contentDescription="@string/image_for_deal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/dealTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_dp"
        android:layout_marginTop="@dimen/standard_dp"
        android:text="@string/title"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintStart_toEndOf="@+id/imageDeal"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dealdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_dp"
        android:layout_marginTop="@dimen/standard_dp"
        android:layout_marginBottom="@dimen/standard_dp"
        android:text="@string/description"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageDeal"
        app:layout_constraintTop_toBottomOf="@+id/dealTitle" />

    <TextView
        android:id="@+id/dealPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_dp"
        android:layout_marginTop="@dimen/large_dp"
        android:layout_marginEnd="@dimen/standard_dp"
        android:layout_marginBottom="8dp"
        android:text="@string/price"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toEndOf="@+id/dealdescription"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>